# mcp-server

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  logger.py  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
tools/: web_search.py
utils/: logger.py
